--- a/css/layout.css
+++ b/css/layout.css
@@ -138,7 +138,7 @@ iframe {
 .expandOnSmall .social-symbols {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 20%;
   transform: translate(-50%, -50%) !important;
   z-index: 99;
 }
@@ -147,10 +147,11 @@ iframe {
   height: 4em;
 }
 .expandOnSmall .social-symbols #follow-us-2 {
-  padding: 0.5em;
-  height: 3em;
+  padding-right: 0.5em;
+  height: 2em;
 }
 .expandOnSmall #isocert-icon-small {
+  height: 5.5em;
   position: absolute;
   top: 50%;
   left: 85%;
