--- a/css/layout.scss
+++ b/css/layout.scss
@@ -13,6 +13,11 @@ font-family: 'Source Sans Pro', sans-serif;*/
     --vertical-dropshadow-up: rgba(0, 0, 0, 0.1) 0px -4px 6px -1px, rgba(0, 0, 0, 0.06) 0px -2px 4px -1px;
 }
 
+//dynamically change content
+.hidden {
+    display: none;
+}
+
 //DESKTOP
 body {
     padding: unset;
@@ -30,27 +35,16 @@ body {
     }
 }
 
-iframe {
-    width: 80vw;
-    height: 100vh;
-    background-color: var(--darkgrey);
-    display: block;
-    margin: 0 auto;
-}
-
 //MAIN BACKGROUND
 .main-background {
+    position: fixed;
+    top: 0;
     background-image: url("../img/background.svg");
     background-color: var(--grey);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
-}
-
-//dynamically change content
-.hidden {
-    display: none;
 }
 
 //HEADER
@@ -117,6 +111,7 @@ iframe {
 }
 
 //MAIN-AREA
+//HOME
 .home {
     height: 80vh;
     position: relative;
@@ -145,12 +140,76 @@ iframe {
     @media screen and (max-width: 768px) {
         height: 65vh;
     }
-
 }
 
+//ISOCERT PAGE
+#metallzert {
+    width: 80vw;
+    height: 100vh;
+    background-color: var(--darkgrey);
+    display: block;
+    margin: 0 auto;
+}
+
+//SOCIAL-MEDIA LINKS
+.social-block {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: fit-content;
+    z-index: 99;
+
+    #social-wrapper {
+        background-image: url("../img/social-block.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 1.5em 5em;
+
+        .social-symbols {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: 50%;
+            z-index: 99;
+
+            #facebook-icon, #instagram-icon {
+                padding: .1em;
+                height: 3em;
+            }
+
+            #follow-us {
+                padding: .5em;
+                height: 3em;
+            }
+        }
+    }
+}
+
+.iso-cert {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: fit-content;
+    color: black;
+    z-index: 99;
+
+        #iso-wrapper {
+            align-items: center;
+            display: flex;
+            padding: 1em 2em;
+
+        img {
+            height: 110px;
+        }
+    }
+}
+
+//MOBILE BEHAVIOUR
 .expandOnSmall {
-    position: relative;
+    position: fixed;
+    bottom: 60px;
     height: 13vh;
+    width: 100%;
     background-color: var(--transparent_white);
     box-shadow: var(--vertical-dropshadow-up);
 
@@ -159,7 +218,7 @@ iframe {
         top: 50%;
         left: 20%;
         transform: translate(-50%, -50%) !important;
-        z-index: 99;
+        z-index: 70;
 
         #facebook-icon, #instagram-icon {
             height: 4em;
@@ -176,10 +235,11 @@ iframe {
     }
 
     #isocert-icon-small {
-        height: 5.5em;
+        height: 6em;
+        padding: .2em 0;
         position: absolute;
         top: 50%;
-        left: 85%;
+        left: 90%;
         transform: translate(-50%, -50%) !important;
 
         &:hover {
@@ -191,13 +251,14 @@ iframe {
 //FOOTER
 .footer {
     background-color: var(--darkgrey);
+    height: 60px;
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     z-index: 80;
     padding: .8em;
-    margin-bottom: 0 !important;
-     
+
     .footer-links {
     color: var(--transparent_white) !important;
     z-index: 99;
@@ -225,56 +286,5 @@ iframe {
         color: var(--lightgrey);
         padding-top: .2em;
     }
-
-    .social-block {
-        position: fixed;
-        bottom: 0px;
-        right: 0px;
-        width: fit-content;
-        z-index: 99;
-
-        #social-wrapper {
-            background-image: url("../img/social-block.svg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            padding: 1.5em 5em;
-
-            .social-symbols {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-left: 50%;
-                z-index: 99;
-
-                #facebook-icon, #instagram-icon {
-                    padding: .1em;
-                    height: 3em;
-                }
-
-                #follow-us {
-                    padding: .5em;
-                    height: 3em;
-                }
-            }
-        }
-    }
-
-    .iso-cert {
-        position: fixed;
-        bottom: 0px;
-        left: 0px;
-        width: fit-content;
-        color: black;
-        z-index: 99;
-
-            #iso-wrapper {
-                align-items: center;
-                display: flex;
-                padding: 1em 2em;
-
-            img {
-                height: 110px;
-            }
-        }
-    }
 }
+
