--- a/css/layout.css
+++ b/css/layout.css
@@ -41,6 +41,9 @@ body a:hover, body a:focus, body a:active {
 }
 
 .navbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
   height: 100px;
   padding-right: 10px;
   border-radius: unset;
@@ -95,31 +98,69 @@ body a:hover, body a:focus, body a:active {
   height: 100vh;
 }
 
-.home {
-  height: 80vh;
+.home, .impressum {
   position: relative;
+  padding-top: 100px;
 }
-.home .teaser-text {
-  height: 70%;
-  z-index: 80;
+.home .teaser-text, .impressum .teaser-text {
+  height: 60vh;
+  z-index: 60;
   left: 30%;
-  top: 50%;
+  top: 50vh;
   transform: translate(-30%, -50%);
   position: absolute;
 }
-.home .teaser-text img {
+.home .teaser-text img, .impressum .teaser-text img {
   height: 100%;
 }
 @media screen and (max-width: 900px) {
-  .home .teaser-text {
+  .home .teaser-text, .impressum .teaser-text {
+    height: 50vh;
+    top: 42vh;
     left: 50%;
-    top: 40%;
     transform: translate(-50%, -40%);
   }
 }
+
+.impressum {
+  padding-bottom: 8vh;
+}
 @media screen and (max-width: 768px) {
-  .home {
-    height: 65vh;
+  .impressum {
+    padding-bottom: 22vh;
+  }
+}
+
+.impressum-text {
+  margin: 3em 10em;
+  background-color: var(--transparent_white);
+  padding: 3% 5%;
+  font-family: "Roboto", sans-serif;
+  color: var(--darkgrey);
+}
+.impressum-text h3 {
+  font-weight: 500;
+  color: var(--telemagenta);
+}
+.impressum-text h4 {
+  color: black;
+}
+.impressum-text .adress, .impressum-text .legal-notice, .impressum-text .business-owner {
+  margin-top: 2em;
+}
+.impressum-text .legal-notice p {
+  padding-bottom: 1em;
+}
+.impressum-text a {
+  color: black;
+}
+.impressum-text a:hover {
+  color: var(--telemagenta);
+}
+@media screen and (max-width: 768px) {
+  .impressum-text {
+    margin: 2em;
+    padding: 5%;
   }
 }
 
@@ -137,7 +178,7 @@ body a:hover, body a:focus, body a:active {
   right: 0px;
   width: -moz-fit-content;
   width: fit-content;
-  z-index: 99;
+  z-index: 99 !important;
 }
 .social-block #social-wrapper {
   background-image: url("../img/social-block.svg");
@@ -190,23 +231,27 @@ body a:hover, body a:focus, body a:active {
 .expandOnSmall .social-symbols {
   position: absolute;
   top: 50%;
-  left: 20%;
+  left: 15%;
   transform: translate(-50%, -50%) !important;
   z-index: 70;
 }
 .expandOnSmall .social-symbols #facebook-icon, .expandOnSmall .social-symbols #instagram-icon {
+  position: relative;
+  left: 10%;
   height: 4em;
 }
 .expandOnSmall .social-symbols #facebook-icon:hover, .expandOnSmall .social-symbols #instagram-icon:hover {
   filter: brightness(0.7);
 }
 .expandOnSmall .social-symbols #follow-us-2 {
-  padding-right: 0.5em;
+  position: relative;
   height: 2em;
+  left: 10%;
+  padding: 0 0.5em 0 1em;
 }
 .expandOnSmall #isocert-icon-small {
   height: 6em;
-  padding: 0.2em 0;
+  padding: 0.2em 2em 0.2em 0;
   position: absolute;
   top: 50%;
   left: 90%;
