--- a/css/layout.scss
+++ b/css/layout.scss
@@ -118,7 +118,7 @@ body {
 
 //MAIN-AREA
 //HOME
-.home, .impressum, .datasec {
+.home, .impressum, .datasec, .contact {
     position: relative;
     padding-top: 100px;
     
@@ -145,7 +145,7 @@ body {
     }
 }
 
-.impressum, .datasec {
+.impressum, .datasec, .contact {
     padding-bottom: 8vh;
 
     @media screen and (max-width: 768px) {
@@ -153,13 +153,14 @@ body {
     }
 }
 
-//IMPRESSUM, DATENSCHUTZ
+//IMPRESSUM, DATENSCHUTZ, KONTAKT
 .textcontainer {
     margin: 3em 10em;
     background-color: var(--transparent_white);
     padding: 3% 5%;
     font-family: 'Roboto', sans-serif;
     color: var(--darkgrey);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
     h2 {
         font-weight: 500;
@@ -178,6 +179,35 @@ body {
         margin: 2em;
         padding: 5%;
        }
+}
+
+//KONTAKT
+.contact {
+    .textcontainer {
+        margin-bottom: 0;
+    }
+
+    .location {
+        width: 100%;
+    }
+
+    .img-container {
+        margin: 0 10em;
+
+        @media screen and (max-width: 768px) {
+            margin: 0 2em;
+           }
+    }
+
+    #locSVG {
+       position: absolute;
+       left: 0;
+       padding: 0 10em;
+
+       @media screen and (max-width: 768px) {
+        padding: 0 2em;
+       }
+    }
 }
 
 //ISOCERT PAGE
