map pin bounce mobile

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -198,12 +198,12 @@ body {
             margin: 0 2em;
            }
     }
-
+    //Desktop Icon
     #locSVG {
        background-image: url("../img/location.png");
        background-size: cover;
     }
-
+    //Mobile Icon
     #locSVG-small {
         background-image: url("../img/location-small.png");
         background-size: cover;
