--- a/css/layout.css
+++ b/css/layout.css
@@ -101,11 +101,69 @@ body a:hover, body a:focus, body a:active {
   height: 100vh;
 }
 
-.home, .impressum, .datasec, .contact {
+.roundedge-button {
+  background-color: var(--telemagenta);
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  border-radius: 8px;
+  box-shadow: var(--vertical-dropshadow-down);
+}
+
+hr.solid {
+  border-top: 3px solid var(--telemagenta);
+}
+
+.textdivider {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  color: var(--grey);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-top: 3em;
+}
+.textdivider::before, .textdivider::after {
+  flex: 1;
+  content: "";
+  padding: 1px;
+  background-color: var(--telemagenta);
+  margin: 10px;
+}
+
+.list-arrow {
+  color: var(--telemagenta);
+  margin-right: 5px;
+}
+
+.gray-underlay {
+  background-color: rgba(137, 141, 141, 0.2823529412);
+  padding: 15px;
+  margin-bottom: 1em;
+  border-radius: 8px;
+  border: none;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+.asterisk {
+  color: var(--telemagenta);
+}
+
+.home, .impressum, .datasec, .contact, .jobs {
   position: relative;
   padding-top: 100px;
 }
-.home .teaser-text, .impressum .teaser-text, .datasec .teaser-text, .contact .teaser-text {
+.home .teaser-text, .impressum .teaser-text, .datasec .teaser-text, .contact .teaser-text, .jobs .teaser-text {
   height: 60vh;
   z-index: 60;
   left: 30%;
@@ -113,11 +171,11 @@ body a:hover, body a:focus, body a:active {
   transform: translate(-30%, -50%);
   position: absolute;
 }
-.home .teaser-text img, .impressum .teaser-text img, .datasec .teaser-text img, .contact .teaser-text img {
+.home .teaser-text img, .impressum .teaser-text img, .datasec .teaser-text img, .contact .teaser-text img, .jobs .teaser-text img {
   height: 100%;
 }
 @media screen and (max-width: 900px) {
-  .home .teaser-text, .impressum .teaser-text, .datasec .teaser-text, .contact .teaser-text {
+  .home .teaser-text, .impressum .teaser-text, .datasec .teaser-text, .contact .teaser-text, .jobs .teaser-text {
     height: 50vh;
     top: 42vh;
     left: 50%;
@@ -125,13 +183,36 @@ body a:hover, body a:focus, body a:active {
   }
 }
 
-.impressum, .datasec, .contact {
+.impressum, .datasec, .contact, .jobs {
   padding-bottom: 8vh;
 }
 @media screen and (max-width: 768px) {
-  .impressum, .datasec, .contact {
+  .impressum, .datasec, .contact, .jobs {
     padding-bottom: 22vh;
   }
+}
+
+.jobs .bouncing-arrow {
+  display: block;
+  margin: 0 auto;
+  font-size: 1.5em;
+  color: var(--telemagenta);
+  text-align: center;
+}
+.jobs #bouncing-arrow-2 {
+  margin-top: -0.6em;
+  margin-bottom: 2em;
+}
+.jobs input.form-check-input {
+  margin-right: 5px;
+}
+.jobs .invalid-feedback {
+  color: rgb(255, 53, 53);
+  margin-top: 5px;
+}
+.jobs .roundedge-button {
+  width: 100%;
+  margin-top: 1em !important;
 }
 
 .textcontainer {
@@ -143,8 +224,9 @@ body a:hover, body a:focus, body a:active {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 .textcontainer h2 {
-  font-weight: 500;
+  font-family: "Source Sans Pro", sans-serif;
   color: var(--telemagenta);
+  margin-bottom: 0.5em;
 }
 .textcontainer a {
   color: black;
@@ -183,6 +265,7 @@ body a:hover, body a:focus, body a:active {
 }
 .contact .fa {
   margin-right: 5px;
+  color: var(--telemagenta);
 }
 
 #metallzert {
