--- a/css/layout.scss
+++ b/css/layout.scss
@@ -143,7 +143,7 @@ hr.solid {
     display: flex;
     align-items: center;
     text-align: center;
-    margin-top: 3em;
+    margin-top: 2em;
 
     &::before, &::after {
         flex: 1;
@@ -215,6 +215,10 @@ input[type=text], select, textarea {
 
 //JOBS
 .jobs {
+    .job-type {
+        margin-left: .8em;
+    }
+
     .bouncing-arrow {
         display: block;
         margin: 0 auto;
