social-block adjustment

--- a/css/layout.css
+++ b/css/layout.css
@@ -330,7 +330,7 @@ input[type=text], select, textarea {
 .social-footer .expandOnSmall {
   position: fixed;
   bottom: 60px;
-  height: 13vh;
+  height: 10vh;
   width: 100%;
   z-index: 80;
   background-color: var(--transparent_white);
@@ -338,6 +338,8 @@ input[type=text], select, textarea {
 }
 .social-footer .expandOnSmall .social-symbols {
   position: absolute;
+  height: 80%;
+  padding: 3px;
   top: 50%;
   left: 15%;
   transform: translate(-50%, -50%) !important;
@@ -346,20 +348,20 @@ input[type=text], select, textarea {
 .social-footer .expandOnSmall .social-symbols #facebook-icon, .social-footer .expandOnSmall .social-symbols #instagram-icon {
   position: relative;
   left: 10%;
-  height: 4em;
+  height: 100%;
 }
 .social-footer .expandOnSmall .social-symbols #facebook-icon:hover, .social-footer .expandOnSmall .social-symbols #instagram-icon:hover {
   filter: brightness(0.7);
 }
 .social-footer .expandOnSmall .social-symbols #follow-us-2 {
   position: relative;
-  height: 2em;
+  height: 50%;
   left: 10%;
   padding: 0 0.5em 0 1em;
 }
 .social-footer .expandOnSmall #isocert-icon-small {
-  height: 6em;
-  padding: 0.2em 2em 0.2em 0;
+  height: 100%;
+  padding: 3px 2em 3px 0;
   position: absolute;
   top: 50%;
   left: 90%;
