--- a/css/layout.css
+++ b/css/layout.css
@@ -242,6 +242,12 @@ input[type=text], select, textarea {
     margin: 2em;
     padding: 5%;
   }
+  .textcontainer h2 {
+    font-size: 1.6em;
+  }
+  .textcontainer h4 {
+    font-size: 1.2em;
+  }
 }
 
 .contact .textcontainer {
