--- a/css/layout.scss
+++ b/css/layout.scss
@@ -275,6 +275,14 @@ input[type=text], select, textarea {
     @media screen and (max-width: 768px) {
         margin: 2em;
         padding: 5%;
+
+        h2 {
+            font-size: 1.6em;
+        }
+
+        h4 {
+            font-size: 1.2em;
+        }
     }
 }
 
