--- a/css/layout.scss
+++ b/css/layout.scss
@@ -113,6 +113,7 @@ body {
         right: 0;
         padding-top: 70px;
         background-color: var(--transparent_white);
+        box-shadow: var(--vertical-dropshadow-down);
         height: 100vh;
     }
 }
