--- a/css/layout.css
+++ b/css/layout.css
@@ -193,6 +193,88 @@ input[type=text], select, textarea {
   }
 }
 
+.references {
+  box-sizing: border-box;
+  /* Position the image container (needed to position the left and right arrows) */
+  /* Hide the images by default */
+  /* Add a pointer when hovering over the thumbnail images */
+  /* Next & previous buttons */
+  /* Position the "next button" to the right */
+  /* On hover, add a black background color with a little bit see-through */
+  /* Number text (1/3 etc) */
+  /* Container for image text */
+  /* 4 columns side by side */
+  /* Add a transparency effect for thumnbail images */
+}
+.references img {
+  width: 100%;
+}
+.references .container {
+  width: 100%;
+  position: relative;
+  padding: unset;
+}
+.references .mySlides {
+  display: none;
+}
+.references .cursor {
+  cursor: pointer;
+}
+.references .prev,
+.references .next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: var(--telemagenta);
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  -moz-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  background-color: var(--transparent_white);
+}
+.references .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.references .prev:hover,
+.references .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.references .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.references .caption-container {
+  text-align: center;
+  background-color: var(--darkgrey);
+  padding: 2px 16px;
+  color: white;
+}
+.references .row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.references .column {
+  float: left;
+  width: 25%;
+}
+.references .demo {
+  opacity: 0.6;
+}
+.references .active,
+.references .demo:hover {
+  opacity: 1;
+}
+
 .jobs #announcement {
   margin-top: 2em;
   color: var(--grey);
